--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,1 +1,112 @@
-{}
+{
+    "/js//main.min.js": "/js//main.min.js",
+    "/js//login.min.js": "/js//login.min.js",
+    "/js/bundle/dashboard.c624be32ea8955cc.js": "/js/bundle/dashboard.c624be32ea8955cc.js",
+    "/js/bundle/products.c624be32ea8955cc.js": "/js/bundle/products.c624be32ea8955cc.js",
+    "/js/bundle/index_products.c624be32ea8955cc.js": "/js/bundle/index_products.c624be32ea8955cc.js",
+    "/js/bundle/store_product.c624be32ea8955cc.js": "/js/bundle/store_product.c624be32ea8955cc.js",
+    "/js/bundle/edit_product.c624be32ea8955cc.js": "/js/bundle/edit_product.c624be32ea8955cc.js",
+    "/js/bundle/detail_product.c624be32ea8955cc.js": "/js/bundle/detail_product.c624be32ea8955cc.js",
+    "/js/bundle/barcode.c624be32ea8955cc.js": "/js/bundle/barcode.c624be32ea8955cc.js",
+    "/js/bundle/Categories.c624be32ea8955cc.js": "/js/bundle/Categories.c624be32ea8955cc.js",
+    "/js/bundle/Brands.c624be32ea8955cc.js": "/js/bundle/Brands.c624be32ea8955cc.js",
+    "/js/bundle/units.c624be32ea8955cc.js": "/js/bundle/units.c624be32ea8955cc.js",
+    "/js/bundle/adjustments.c624be32ea8955cc.js": "/js/bundle/adjustments.c624be32ea8955cc.js",
+    "/js/bundle/index_adjustment.c624be32ea8955cc.js": "/js/bundle/index_adjustment.c624be32ea8955cc.js",
+    "/js/bundle/store_adjustment.c624be32ea8955cc.js": "/js/bundle/store_adjustment.c624be32ea8955cc.js",
+    "/js/bundle/edit_adjustment.c624be32ea8955cc.js": "/js/bundle/edit_adjustment.c624be32ea8955cc.js",
+    "/js/bundle/transfers.c624be32ea8955cc.js": "/js/bundle/transfers.c624be32ea8955cc.js",
+    "/js/bundle/index_transfer.c624be32ea8955cc.js": "/js/bundle/index_transfer.c624be32ea8955cc.js",
+    "/js/bundle/store_transfer.c624be32ea8955cc.js": "/js/bundle/store_transfer.c624be32ea8955cc.js",
+    "/js/bundle/edit_transfer.c624be32ea8955cc.js": "/js/bundle/edit_transfer.c624be32ea8955cc.js",
+    "/js/bundle/expenses.c624be32ea8955cc.js": "/js/bundle/expenses.c624be32ea8955cc.js",
+    "/js/bundle/index_expense.c624be32ea8955cc.js": "/js/bundle/index_expense.c624be32ea8955cc.js",
+    "/js/bundle/store_expense.c624be32ea8955cc.js": "/js/bundle/store_expense.c624be32ea8955cc.js",
+    "/js/bundle/edit_expense.c624be32ea8955cc.js": "/js/bundle/edit_expense.c624be32ea8955cc.js",
+    "/js/bundle/expense_category.c624be32ea8955cc.js": "/js/bundle/expense_category.c624be32ea8955cc.js",
+    "/js/bundle/quotations.c624be32ea8955cc.js": "/js/bundle/quotations.c624be32ea8955cc.js",
+    "/js/bundle/store_quotation.c624be32ea8955cc.js": "/js/bundle/store_quotation.c624be32ea8955cc.js",
+    "/js/bundle/edit_quotation.c624be32ea8955cc.js": "/js/bundle/edit_quotation.c624be32ea8955cc.js",
+    "/js/bundle/detail_quotation.c624be32ea8955cc.js": "/js/bundle/detail_quotation.c624be32ea8955cc.js",
+    "/js/bundle/change_to_sale.c624be32ea8955cc.js": "/js/bundle/change_to_sale.c624be32ea8955cc.js",
+    "/js/bundle/purchases.c624be32ea8955cc.js": "/js/bundle/purchases.c624be32ea8955cc.js",
+    "/js/bundle/index_purchases.c624be32ea8955cc.js": "/js/bundle/index_purchases.c624be32ea8955cc.js",
+    "/js/bundle/store_purchase.c624be32ea8955cc.js": "/js/bundle/store_purchase.c624be32ea8955cc.js",
+    "/js/bundle/edit_purchase.c624be32ea8955cc.js": "/js/bundle/edit_purchase.c624be32ea8955cc.js",
+    "/js/bundle/create_purchase_return.c624be32ea8955cc.js": "/js/bundle/create_purchase_return.c624be32ea8955cc.js",
+    "/js/bundle/detail_purchase.c624be32ea8955cc.js": "/js/bundle/detail_purchase.c624be32ea8955cc.js",
+    "/js/bundle/sales.c624be32ea8955cc.js": "/js/bundle/sales.c624be32ea8955cc.js",
+    "/js/bundle/index_sales.c624be32ea8955cc.js": "/js/bundle/index_sales.c624be32ea8955cc.js",
+    "/js/bundle/store_sale.c624be32ea8955cc.js": "/js/bundle/store_sale.c624be32ea8955cc.js",
+    "/js/bundle/edit_sale.c624be32ea8955cc.js": "/js/bundle/edit_sale.c624be32ea8955cc.js",
+    "/js/bundle/create_sale_return.c624be32ea8955cc.js": "/js/bundle/create_sale_return.c624be32ea8955cc.js",
+    "/js/bundle/detail_sale.c624be32ea8955cc.js": "/js/bundle/detail_sale.c624be32ea8955cc.js",
+    "/js/bundle/shipment.c624be32ea8955cc.js": "/js/bundle/shipment.c624be32ea8955cc.js",
+    "/js/bundle/sale_return.c624be32ea8955cc.js": "/js/bundle/sale_return.c624be32ea8955cc.js",
+    "/js/bundle/index_sale_return.c624be32ea8955cc.js": "/js/bundle/index_sale_return.c624be32ea8955cc.js",
+    "/js/bundle/edit_sale_return.c624be32ea8955cc.js": "/js/bundle/edit_sale_return.c624be32ea8955cc.js",
+    "/js/bundle/detail_sale_return.c624be32ea8955cc.js": "/js/bundle/detail_sale_return.c624be32ea8955cc.js",
+    "/js/bundle/purchase_return.c624be32ea8955cc.js": "/js/bundle/purchase_return.c624be32ea8955cc.js",
+    "/js/bundle/index_purchase_return.c624be32ea8955cc.js": "/js/bundle/index_purchase_return.c624be32ea8955cc.js",
+    "/js/bundle/edit_purchase_return.c624be32ea8955cc.js": "/js/bundle/edit_purchase_return.c624be32ea8955cc.js",
+    "/js/bundle/detail_purchase_return.c624be32ea8955cc.js": "/js/bundle/detail_purchase_return.c624be32ea8955cc.js",
+    "/js/bundle/hrm.c624be32ea8955cc.js": "/js/bundle/hrm.c624be32ea8955cc.js",
+    "/js/bundle/employees.c624be32ea8955cc.js": "/js/bundle/employees.c624be32ea8955cc.js",
+    "/js/bundle/index_employee.c624be32ea8955cc.js": "/js/bundle/index_employee.c624be32ea8955cc.js",
+    "/js/bundle/store_employee.c624be32ea8955cc.js": "/js/bundle/store_employee.c624be32ea8955cc.js",
+    "/js/bundle/edit_employee.c624be32ea8955cc.js": "/js/bundle/edit_employee.c624be32ea8955cc.js",
+    "/js/bundle/detail_employee.c624be32ea8955cc.js": "/js/bundle/detail_employee.c624be32ea8955cc.js",
+    "/js/bundle/company.c624be32ea8955cc.js": "/js/bundle/company.c624be32ea8955cc.js",
+    "/js/bundle/departments.c624be32ea8955cc.js": "/js/bundle/departments.c624be32ea8955cc.js",
+    "/js/bundle/designations.c624be32ea8955cc.js": "/js/bundle/designations.c624be32ea8955cc.js",
+    "/js/bundle/office_shift.c624be32ea8955cc.js": "/js/bundle/office_shift.c624be32ea8955cc.js",
+    "/js/bundle/attendance.c624be32ea8955cc.js": "/js/bundle/attendance.c624be32ea8955cc.js",
+    "/js/bundle/holidays.c624be32ea8955cc.js": "/js/bundle/holidays.c624be32ea8955cc.js",
+    "/js/bundle/leaves.c624be32ea8955cc.js": "/js/bundle/leaves.c624be32ea8955cc.js",
+    "/js/bundle/leave_list.c624be32ea8955cc.js": "/js/bundle/leave_list.c624be32ea8955cc.js",
+    "/js/bundle/leave_type.c624be32ea8955cc.js": "/js/bundle/leave_type.c624be32ea8955cc.js",
+    "/js/bundle/People.c624be32ea8955cc.js": "/js/bundle/People.c624be32ea8955cc.js",
+    "/js/bundle/Customers.c624be32ea8955cc.js": "/js/bundle/Customers.c624be32ea8955cc.js",
+    "/js/bundle/Suppliers.c624be32ea8955cc.js": "/js/bundle/Suppliers.c624be32ea8955cc.js",
+    "/js/bundle/Users.c624be32ea8955cc.js": "/js/bundle/Users.c624be32ea8955cc.js",
+    "/js/bundle/settings.c624be32ea8955cc.js": "/js/bundle/settings.c624be32ea8955cc.js",
+    "/js/bundle/permissions.c624be32ea8955cc.js": "/js/bundle/permissions.c624be32ea8955cc.js",
+    "/js/bundle/groupPermission.c624be32ea8955cc.js": "/js/bundle/groupPermission.c624be32ea8955cc.js",
+    "/js/bundle/store_permission.c624be32ea8955cc.js": "/js/bundle/store_permission.c624be32ea8955cc.js",
+    "/js/bundle/edit_permission.c624be32ea8955cc.js": "/js/bundle/edit_permission.c624be32ea8955cc.js",
+    "/js/bundle/sms_settings.c624be32ea8955cc.js": "/js/bundle/sms_settings.c624be32ea8955cc.js",
+    "/js/bundle/pos_settings.c624be32ea8955cc.js": "/js/bundle/pos_settings.c624be32ea8955cc.js",
+    "/js/bundle/payment_gateway.c624be32ea8955cc.js": "/js/bundle/payment_gateway.c624be32ea8955cc.js",
+    "/js/bundle/mail_settings.c624be32ea8955cc.js": "/js/bundle/mail_settings.c624be32ea8955cc.js",
+    "/js/bundle/update_settings.c624be32ea8955cc.js": "/js/bundle/update_settings.c624be32ea8955cc.js",
+    "/js/bundle/Currencies.c624be32ea8955cc.js": "/js/bundle/Currencies.c624be32ea8955cc.js",
+    "/js/bundle/Backup.c624be32ea8955cc.js": "/js/bundle/Backup.c624be32ea8955cc.js",
+    "/js/bundle/Warehouses.c624be32ea8955cc.js": "/js/bundle/Warehouses.c624be32ea8955cc.js",
+    "/js/bundle/System_settings.c624be32ea8955cc.js": "/js/bundle/System_settings.c624be32ea8955cc.js",
+    "/js/bundle/payments_purchases.c624be32ea8955cc.js": "/js/bundle/payments_purchases.c624be32ea8955cc.js",
+    "/js/bundle/payments_sales.c624be32ea8955cc.js": "/js/bundle/payments_sales.c624be32ea8955cc.js",
+    "/js/bundle/payments_purchases_returns.c624be32ea8955cc.js": "/js/bundle/payments_purchases_returns.c624be32ea8955cc.js",
+    "/js/bundle/payments_sales_returns.c624be32ea8955cc.js": "/js/bundle/payments_sales_returns.c624be32ea8955cc.js",
+    "/js/bundle/profit_and_loss.c624be32ea8955cc.js": "/js/bundle/profit_and_loss.c624be32ea8955cc.js",
+    "/js/bundle/quantity_alerts.c624be32ea8955cc.js": "/js/bundle/quantity_alerts.c624be32ea8955cc.js",
+    "/js/bundle/warehouse_report.c624be32ea8955cc.js": "/js/bundle/warehouse_report.c624be32ea8955cc.js",
+    "/js/bundle/sales_report.c624be32ea8955cc.js": "/js/bundle/sales_report.c624be32ea8955cc.js",
+    "/js/bundle/purchase_report.c624be32ea8955cc.js": "/js/bundle/purchase_report.c624be32ea8955cc.js",
+    "/js/bundle/customers_report.c624be32ea8955cc.js": "/js/bundle/customers_report.c624be32ea8955cc.js",
+    "/js/bundle/detail_customer_report.c624be32ea8955cc.js": "/js/bundle/detail_customer_report.c624be32ea8955cc.js",
+    "/js/bundle/providers_report.c624be32ea8955cc.js": "/js/bundle/providers_report.c624be32ea8955cc.js",
+    "/js/bundle/detail_supplier_report.c624be32ea8955cc.js": "/js/bundle/detail_supplier_report.c624be32ea8955cc.js",
+    "/js/bundle/top_selling_products.c624be32ea8955cc.js": "/js/bundle/top_selling_products.c624be32ea8955cc.js",
+    "/js/bundle/top_customers.c624be32ea8955cc.js": "/js/bundle/top_customers.c624be32ea8955cc.js",
+    "/js/bundle/stock_report.c624be32ea8955cc.js": "/js/bundle/stock_report.c624be32ea8955cc.js",
+    "/js/bundle/detail_stock_report.c624be32ea8955cc.js": "/js/bundle/detail_stock_report.c624be32ea8955cc.js",
+    "/js/bundle/users_report.c624be32ea8955cc.js": "/js/bundle/users_report.c624be32ea8955cc.js",
+    "/js/bundle/detail_user_report.c624be32ea8955cc.js": "/js/bundle/detail_user_report.c624be32ea8955cc.js",
+    "/js/bundle/profile.c624be32ea8955cc.js": "/js/bundle/profile.c624be32ea8955cc.js",
+    "/js/bundle/pos.c624be32ea8955cc.js": "/js/bundle/pos.c624be32ea8955cc.js",
+    "/js/bundle/NotFound.c624be32ea8955cc.js": "/js/bundle/NotFound.c624be32ea8955cc.js",
+    "/js/bundle/not_authorize.c624be32ea8955cc.js": "/js/bundle/not_authorize.c624be32ea8955cc.js",
+    "/js/bundle/largeSidebar.c624be32ea8955cc.js": "/js/bundle/largeSidebar.c624be32ea8955cc.js",
+    "/js/bundle/customizer.c624be32ea8955cc.js": "/js/bundle/customizer.c624be32ea8955cc.js",
+    "/js/bundle/vue-perfect-scrollbar.c624be32ea8955cc.js": "/js/bundle/vue-perfect-scrollbar.c624be32ea8955cc.js"
+}
